# omero-ruletagger

./: .gitignore  Dockerfile  README.md  mkdocs.yml  patch.py  pyproject.toml  requirements.txt  rules.yml  test_rules.yml
.devcontainer/: devcontainer.json
.github/workflows/: build.yml
docs/: .readthedocs.yaml  attribute.md  capture.md  getting_started.md  index.md  limitations.md  patch.md  requirements.md  rules.md  usage.md
k8s/: omero-autotagger-config.yaml  omero-autotagger-cronjob.yaml
requirements/: requirements-docs.txt  requirements-lint.txt  requirements-test.txt  requirements-types.txt
src/: rules_tagged.csv
src/omero_ruletagger/: __main__.py  compiler.py  getter.py  logic.py  tagger.py
